Introduced DatePeriod together with its ParamConverter

--- a/Resources/views/Sensor/get.html.twig
+++ b/Resources/views/Sensor/get.html.twig
@@ -56,72 +56,10 @@
     {% endif %}
     <hr>
     {{ render(controller('BluemesaSensorBundle:Sensor:chart',
-        {'sensor': sensor.id, 'start': start, 'end': end} ))
+        {'sensor': sensor.id, 'start': period.start | date("d M Y H:m:s"), 'end': period.end | date("d M Y H:m:s")} ))
     }}
 {% endblock modal_body %}
 
 {% block modal_footer %}
 
 {% endblock modal_footer %}
-
-{#
-
-{% block headline %}
-    <p>
-        {{ sensor.name }}
-        {% if sensor.online %}
-            <span class="pull-right">
-                &nbsp;<i class="fa fa-circle icon-success" title="online" aria-hidden="true"></i>
-            </span>
-        {% else %}
-            <span class="pull-right">
-                &nbsp;<i class="fa fa-circle icon-danger" title="offline" aria-hidden="true"></i>
-            </span>
-        {% endif %}
-        {%  if sensor.tooCold %}
-            <span class="pull-right">
-                &nbsp;<i class="fa fa-exclamation-triangle icon-primary" title="too cold" aria-hidden="true"></i>
-            </span>
-        {%  endif %}
-        {%  if sensor.tooHot %}
-            <span class="pull-right">
-                &nbsp;<i class="fa fa-exclamation-triangle icon-danger" title="too hot" aria-hidden="true"></i>
-            </span>
-        {%  endif %}
-        {%  if not sensor.tooDry %}
-            <span class="pull-right">
-                &nbsp;<i class="fa fa-times-circle icon-warning" title="too dry" aria-hidden="true"></i>
-            </span>
-        {%  endif %}
-
-    </p>
-{% endblock headline %}
-
-{% block content %}
-    <h4>Last update: {{ sensor.latestReading.timestamp | date("d M Y H:m:s") }}</h4>
-    <h4>Current temperature: {{ sensor.latestReading.temperature }} ℃</h4>
-    <h4>Current humidity: {{ sensor.latestReading.humidity }} %rH</h4>
-    {{ render(controller('BluemesaSensorBundle:Sensor:chart',
-        {'sensor': sensor.id, 'start': start, 'end': end} ))
-    }}
-{% endblock %}
-
-{% block header_row %}
-    <div class="col-sm-12">
-        {% block page_header %}
-            <div class="page-header">
-                <h1>{{ block('headline') }}</h1>
-            </div>
-        {% endblock page_header %}
-    </div>
-{% endblock header_row %}
-
-{% block main_row %}
-    <div class="col-sm-12">
-        {% block content_row %}
-            {{ block('content') }}
-        {% endblock content_row %}
-    </div>
-{% endblock main_row %}
-
-#}
