Various bugfixes after 3.0 upgrade

--- a/Resources/views/Sensor/get.html.twig
+++ b/Resources/views/Sensor/get.html.twig
@@ -1,6 +1,7 @@
 {% extends "BluemesaSiteTemplateBundle::layout.html.twig" %}
 {% use "BluemesaSiteTemplateBundle:Show:modal.html.twig" %}
 {% import "BluemesaSiteTemplateBundle:Macros:show.html.twig" as s %}
+{% import 'BluemesaSiteTemplateBundle:Macros:status.html.twig' as status %}
 
 {% block header_row %}
     <div class="col-sm-offset-3 col-sm-9">
@@ -12,34 +13,12 @@
 
 {% block modal_header %}
     {{ sensor }}
-    {% if sensor.online %}
-        <span class="pull-right">
-                &nbsp;<i class="fa fa-circle icon-success" title="online" aria-hidden="true"></i>
-            </span>
-    {% else %}
-        <span class="pull-right">
-                &nbsp;<i class="fa fa-circle icon-danger" title="offline" aria-hidden="true"></i>
-            </span>
-    {% endif %}
-    {%  if sensor.tooCold %}
-        <span class="pull-right">
-                &nbsp;<i class="fa fa-exclamation-triangle icon-primary" title="too cold" aria-hidden="true"></i>
-            </span>
-    {%  endif %}
-    {%  if sensor.tooHot %}
-        <span class="pull-right">
-                &nbsp;<i class="fa fa-exclamation-triangle icon-danger" title="too hot" aria-hidden="true"></i>
-            </span>
-    {%  endif %}
-    {%  if sensor.tooDry %}
-        <span class="pull-right">
-                &nbsp;<i class="fa fa-times-circle icon-warning" title="too dry" aria-hidden="true"></i>
-            </span>
-    {%  endif %}
+    {{ status.online(sensor) }}
+    {{ status.environmental(sensor) }}
 {% endblock modal_header %}
 
 {% block modal_body %}
-    {{ s.row("Last update", sensor.latestReading.timestamp | date("d M Y H:m:s"))  }}
+    {{ s.row("Last update", sensor.latestReading.timestamp | date("d M Y H:i:s"))  }}
     {{ s.row("Preset temperature", sensor.presetTemperature ~ "℃") }}
     {% if sensor.tooCold %}
         {{ s.row("Current temperature", sensor.latestReading.temperature ~ "℃", null, null, null, null, "text-primary") }}
